Fixed styling issue in editor
Zooming out too far would cause multiple rows to render side-by-side

--- a/src/components/editor/BefungeEditor.module.scss
+++ b/src/components/editor/BefungeEditor.module.scss
@@ -4,12 +4,15 @@
     padding: 1em;
     width: 100%;
 
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+
     border: 2px solid var(--primaryVeryDark);
     background-color: var(--primaryDark);
     box-sizing: border-box;
 
     overflow-x: scroll;
-    text-align: center;
 }
 
 .editor-row {
